# algorithms-homeworks

./: .gitignore  LICENSE  README.md
lista-cinco/cpp/: CMakeLists.txt  Edge.cpp  Edge.h  Point.cpp  Point.h  main.cpp
lista-dois/cpp/: .gitignore  CMakeLists.txt  ParkedCar.cpp  ParkedCar.h  main.cpp  saida  teste
lista-dois/cpp/parkings/: BaseParkingSystem.cpp  BaseParkingSystem.h  ParkingA.cpp  ParkingA.h  ParkingB.cpp  ParkingB.h
lista-quatro/cpp/: CMakeLists.txt  Graph.cpp  Graph.h  main.cpp
lista-tres/cpp/: Agent.cpp  Agent.h  BasesManager.cpp  BasesManager.h  CMakeLists.txt  main.cpp
lista-tres/cpp/DataStructures/: DynamicArray.cpp  DynamicArray.h
lista-um/cpp/: CMakeLists.txt  main.cpp
lista-um/cpp/operators/: AndOperator.cpp  AndOperator.h  BinaryOperator.cpp  BinaryOperator.h  BinaryOperatorFactory.cpp  BinaryOperatorFactory.h  ImpliesOperator.cpp  ImpliesOperator.h  OrOperator.cpp  OrOperator.h
lista-um/cpp/structures/: Stack.cpp  Stack.h
